--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script>
 
 const offers={
-    "url-23":"https://flankdivers.com/0/0/0/5f17644a0ae4d89d261edf1e423232f4/mailerId/listId/emailId",
-    "unsub-23":"https://flankdivers.com/0/0/0/5f17644a0ae4d89d261edf1e423232f4/"
+    "url-23":"https://aureumpoculum.com/0/0/0/u1a7bbb4bf014a4adf0b957924918cf80/mailerId/listId/emailId",
+    "unsub-23":"https://aureumpoculum.com/0/0/0/u1a7bbb4bf014a4adf0b957924918cf80"
 
 }
 const hash=window.location.hash.replace('#','');
